added death screen

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=10,10
+Pos=487,642
 Size=626,371
 Collapsed=1
 
@@ -39,4 +39,12 @@ Size=763,426
 [Window][ChatOverlay]
 Pos=1306,699
 Size=284,191
+
+[Window][MenuButtonOverlay]
+Pos=678,644
+Size=243,62
+
+[Window][FullscreenOverlay]
+Pos=0,0
+Size=1600,900
 
